# fgame

./: CMakeLists.txt  vcpkg.json
src/: camera.cpp  camera.h  ftypes.h  input.cpp  input.h  main.cpp  mesh.h  mouse.cpp  mouse.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h
src/resources/shaders/: default.frag  default.vert
src/shaders/: default.frag  default.vert
